Added link to docs

--- a/README
+++ b/README
@@ -5,6 +5,7 @@ cockatoo - A similarity metric for macromolecular crystallization conditions
 cockatoo is an implementation of a similarity metric used in the comparison of
 macromolecular crystallization conditions (or cocktails).
 
+Documention is online at: http://ubccr.github.io/cockatoo/
 
 ------------------------------------------------------------------------
 INSTALL
