--- a/_sources/changelog.txt
+++ b/_sources/changelog.txt
@@ -1,6 +1,19 @@
 ChangeLog
 =========
 
+v0.5.0
+----------------------
+
+- Removed dependency on RDKit. now using pinky for ECFP generation
+- Refactored CLI to use click (http://click.pocoo.org/)
+- Removed support for C6 algorithm
+- JSON serialization now using marshmallow (http://marshmallow.readthedocs.org)
+
+v0.0.2
+----------------------
+
+- Minor bug fixes
+
 v0.0.1
 ----------------------
 
