--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,11 @@
 ChangeLog
 =========
 
+v0.5.1
+----------------------
+
+- Update setup.py to fix marshmallow version <=0.7.0
+
 v0.5.0
 ----------------------
 
