--- a/AUTHORS
+++ b/AUTHORS
@@ -2,11 +2,10 @@
 cockatoo - AUTHORS
 ========================================================================
 
-The code for cockatoo was originally written and currently maintained by:
-      Andrew E. Bruno <aebruno2@buffalo.edu>
+cockatoo was originally written and currently maintained by:
 
-Contributors:
-    - Amanda M. Ruby <amandaru@buffalo.edu>
-    - Edward Snell <esnell@hwi.buffalo.edu>
-    - Joseph Luft <luft@hwi.buffalo.edu>
-    - Thomas Grant <tgrant@hwi.buffalo.edu>
+- Andrew E. Bruno <aebruno2@buffalo.edu>
+- Amanda M. Ruby <amandaru@buffalo.edu>
+- Edward Snell <esnell@hwi.buffalo.edu>
+- Joseph Luft <luft@hwi.buffalo.edu>
+- Thomas Grant <tgrant@hwi.buffalo.edu>
